...
        return String(format: "%.02f miles", miles.value)
    }
    
    class func getDuration(forLocations locations: [CLLocation]) -> String {
        guard let start = locations.first,
            let end = locations.last else {
                return "0 hr 0 min 0 sec"
        }
        let cal = Calendar.current
        let components = cal.dateComponents([
            Calendar.Component.hour,
            Calendar.Component.minute,
            Calendar.Component.second
...
        }
        return durationParts.joined(separator: " ")
    }
    
    class func getAverageSpeed(forLocations locations: [CLLocation]) -> String {
        guard locations.count >= 1 else {
            return "0 mph"
        }
        let speeds = locations.map { location in
            return location.speed
        }
        var total = 0.0
        for speed in speeds {
...
