...
        super.viewDidLayoutSubviews()
        self.view.backgroundColor = UIColor(named: "accent")
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Stats"
        
        self.stack.axis = .vertical
        self.stack.distribution = .fill
        self.stack.translatesAutoresizingMaskIntoConstraints = false
        self.stack.spacing = 10
        self.view.addSubview(self.stack)
...
